# xfs_undelete

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh  teardown.sh
client/: Makefile  main.cpp  utils.cpp  utils.hpp
lib/: Makefile  README.md  linux_file.cpp  linux_file.hpp  linux_file2.cpp  linux_file2.hpp  main.cpp  pandora_exceptions.hpp  pandora_log.hpp  xfs_agf.h  xfs_agi.h  xfs_exceptions.hpp  xfs_extent.hpp  xfs_inode.hpp  xfs_inode_entry.cpp  xfs_inode_entry.hpp  xfs_parser.cpp  xfs_parser.hpp  xfs_superblock.h  xfs_tree.hpp  xfs_trees.h  xfs_types.h  xfs_undelete.cpp
presentation/: presentation.pres
tests/: copy_thesis.sh  create_files.py  delete_random.py  example.sh  fix_owner.sh  mount.sh  run.sh  setup.sh  teardown.sh  umount.sh  xfs_undelete
